<resources>
    <string name="app_name">Card Holder</string>
    <string name="user_name_hint">Holder name</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Create</string>
    <string name="empty_field">Empty</string>
    <string name="incorrect_data">Incorrect</string>
    <string name="user_name_already_created">Holder have already created</string>
    <string name="card_background_description">card background</string>
    <string name="card_menu_description">card menu</string>
    <string name="social_networks">Social Networks</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="add_button_description">add button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>