<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".fragments.LoginFragment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:gravity="center"
            android:text="@string/app_name"
            android:layout_marginBottom="64dp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:inputType="text"
            style="@style/InputField"
            android:layout_marginBottom="20dp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/InputField"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/register"
                    style="@style/Button"
                    android:theme="@style/Button"/>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/login"
                    style="@style/Button"
                    android:theme="@style/Button"/>
        </LinearLayout>
</LinearLayout>